// Forked from:
// https://github.com/cosmos/cosmos-sdk/blob/v0.44.5/proto/cosmos/auth/v1beta1/auth.proto

syntax = "proto3";
package cosmos.auth.v1beta1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/auth/types";

// BaseAccount defines a base account type. It contains all the necessary fields
// for basic account functionality. Any custom account type should extend this
// type for additional functionality (e.g. vesting).
message BaseAccount {
  option (gogoproto.goproto_getters)  = false;
  option (gogoproto.goproto_stringer) = false;
  option (gogoproto.equal)            = false;

  option (cosmos_proto.implements_interface) = "AccountI";

  string              address        = 1;
  google.protobuf.Any pub_key        = 2 [
    (gogoproto.jsontag) = "public_key,omitempty", (gogoproto.moretags) = "yaml:\"public_key\""
  ];
  uint64              account_number = 3 [(gogoproto.moretags) = "yaml:\"account_number\""];
  uint64              sequence       = 4;
}
